<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="419dp"
        android:layout_height="245dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_signup"
        android:contentDescription="@string/login_screen" />

    <!-- Semi-Transparent Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_transparent_color" />


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/fittrack"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="626dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-9dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_back"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/username"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/edittext_border"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password">

            <CheckBox
                android:id="@+id/chkSaveCredentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/white" />

            <View
                android:layout_width="16dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textViewForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/forgot_password"
                android:textColor="#03A9F4" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="361dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#03A8F3"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#03A7F2"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
