<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/noEntriesMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No weight entries available."
        android:textStyle="italic"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="18sp" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:layout_below="@id/textViewWeight"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:id="@+id/graphLabels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/graph"
                android:gravity="center"
                android:orientation="horizontal" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_below="@+id/graph"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="138dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewWeightEntries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:padding="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_weight_entry" />

            </ScrollView>

            <Button
                android:id="@+id/buttonAddWeight"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="91dp"
                android:layout_marginBottom="33dp"
                android:backgroundTint="#03A8F3"
                android:minHeight="48dp"
                android:text="@string/add_weight"
                android:textColor="#311B92" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="16dp"
                android:text="@string/weight_activity"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="95dp"
                android:layout_marginTop="502dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="36dp"
                android:layout_toStartOf="@+id/buttonAddWeight"
                android:checked="true"
                android:text="@string/kg_lb"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/goal_weight_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="87dp"
                android:text="Goal Weight"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="9dp"
                android:text="Logout"
                android:textColor="@color/button_color"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="157dp"
                android:layout_toStartOf="@+id/goal_weight_button"
                android:backgroundTint="@color/white"
                android:contentDescription="Back"
                android:src="@drawable/ic_back_arrrow"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="73dp"
                android:layout_marginBottom="615dp"
                android:layout_toStartOf="@+id/goal_weight_button"
                android:text="FitTrack"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>
